syntax = "proto3";

service Users {
    rpc Add(AddRequest) returns (AddResponse) {}
    rpc Get(GetRequest) returns (UserMain) {}
    rpc GetExtra(GetRequest) returns (UserExtra) {}
    rpc GetByUsernameOrEmail(GetByUsernameOrEmailRequest) returns (UserMain) {}
    rpc Auth(AuthRequest) returns (AuthResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc UpdateExtra(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}

    rpc Activate(ActivateRequest) returns (ActivateResponse) {}
}

message UpdateRequest {
    string userID = 1;
    UserMain update = 2;
    string collection = 3;
}

message AddRequest {
    UserMain mainData = 1;
    UserExtra extraData = 2;
}


message UserMain {
	string userID = 1;
	string username = 2;
	string email = 3;
    string password = 4;
    string message = 5;
}

message UserExtra {
    string userId = 1;
    string firstName = 2;
	string lastName = 3;
	string gender = 4;
    int64 birthdayUTC = 5;
    string message = 6;
}

message AddResponse {
    string userID = 1;
    string message = 2;
}

message GetRequest {
    string userID = 1;
}


message GetByUsernameOrEmailRequest {
    string username = 1;
    string email = 2;
}


message AuthRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message AuthResponse {
    bool valid = 1;
    string message = 2;
    string userID = 3;
}

message UpdateResponse {
    string message = 1;
}

//Delete Function
message DeleteRequest {
    string userID = 1;
    string username = 2;
    string password = 3;
}

message DeleteResponse {
    string message = 1;
}

message ActivateRequest {
    string email = 1;
}

message ActivateResponse {
    string message = 1;
}